--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/Artemoire/step-framework.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Dejan Tot",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Artemoire/step-framework/issues"
